--- a/MagenForms.css
+++ b/MagenForms.css
@@ -30,6 +30,10 @@ h3{
 	margin-bottom: 0px;
 	text-transform: uppercase;
 }
+.important h3{
+	font-size: 20px;
+	margin-left:20px;
+}
 .box input{
 	margin: 0px 50px;
 	border-radius: 10px;
