--- a/media-MagenForms.css
+++ b/media-MagenForms.css
@@ -1,10 +1,11 @@
 
-@media  screen and (max-width:968px){
+@media  screen and (max-width:500px){
 .container{
-	width: 80%;
+	width: 98%;
 }
 h1{
-	font-size: 60px;
+	font-size: 20vw;
 	text-transform: uppercase;
 }
+
 }
