--- a/media-Magen.css
+++ b/media-Magen.css
@@ -68,7 +68,12 @@ aside .overflowbox a:hover{
  .buttonbox{
 	margin: 0
 }
-
+.container{
+	width: 98%;
+}
+h1{
+	font-size: 50px
+}
 }	
 
 
@@ -80,6 +85,9 @@ aside .overflowbox a:hover{
 .card-container{
 	max-width:37%; 
 	margin: 4px;
+}
+ h1{
+	font-size: 30px
 }
  }
 
